[gd_scene load_steps=8 format=3 uid="uid://x12p6n0grwcb"]

[ext_resource type="Script" path="res://Scenes/Levels/level_2.gd" id="1_onpu5"]
[ext_resource type="TileSet" uid="uid://bt37p25lfubdf" path="res://Scenes/Levels/level_tileset.tres" id="2_4p475"]
[ext_resource type="SpriteFrames" uid="uid://dkg5r587rtpur" path="res://Assets/sky_anim.tres" id="2_ttfpe"]
[ext_resource type="PackedScene" uid="uid://doiabxb1tqnvy" path="res://Scenes/level_title.tscn" id="4_u8sy7"]
[ext_resource type="Texture2D" uid="uid://8evdqokf1n8i" path="res://Assets/chest.png" id="5_642sv"]
[ext_resource type="PackedScene" uid="uid://df7i4jhygdk7l" path="res://Scenes/placeable_area.tscn" id="6_rayiv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_orxm7"]
size = Vector2(200, 110)

[node name="level_2" type="Node2D"]
script = ExtResource("1_onpu5")

[node name="bg" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.670588, 0.662745, 0.639216, 1)
texture_filter = 3
position = Vector2(562, 312.5)
scale = Vector2(18.5625, 10.7656)
sprite_frames = ExtResource("2_ttfpe")
frame_progress = 0.37943
speed_scale = 0.5

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 3
tile_set = ExtResource("2_4p475")
format = 2
layer_0/tile_data = PackedInt32Array(1966081, 3, 0, 1966082, 3, 0, 2031618, 3, 0, 1966080, 3, 0, 2031617, 3, 0, 2031619, 3, 0, 2097155, 3, 0, 2097156, 3, 0, 2097157, 3, 0, 2162693, 3, 0, 2162694, 3, 0, 2162695, 3, 0, 2162696, 3, 0, 2162697, 3, 0, 2162698, 3, 0, 2228235, 3, 0, 2228236, 3, 0, 2228237, 3, 0, 2228238, 3, 0, 2228239, 3, 0, 2228240, 3, 0, 2293777, 3, 0, 2293778, 3, 0, 2293779, 3, 0, 2293780, 3, 0, 2293781, 3, 0, 2359317, 3, 0, 2359318, 3, 0, 2359319, 3, 0, 2359320, 3, 0, 2424856, 3, 0, 2424857, 3, 0, 2424858, 3, 0, 2424859, 3, 0, 2424860, 3, 0, 2424861, 3, 0, 2490398, 3, 0, 2490399, 3, 0, 2555935, 3, 0, 2555936, 3, 0, 2621472, 3, 0, 2621471, 3, 0, 2621470, 3, 0, 2621469, 3, 0, 2621468, 3, 0, 2687003, 3, 0, 2687002, 3, 0, 2687001, 3, 0, 2687000, 3, 0, 2686999, 3, 0, 2686998, 3, 0, 2686997, 3, 0, 2686996, 3, 0, 2686995, 3, 0, 2686994, 3, 0, 2686993, 3, 0, 2686992, 3, 0, 2686991, 3, 0, 2686990, 3, 0, 2686989, 3, 0, 2686988, 3, 0, 2686987, 3, 0, 2686986, 3, 0, 2686985, 3, 0, 2686984, 3, 0, 2686983, 3, 0, 2686982, 3, 0, 2686981, 3, 0, 2686980, 3, 0, 2686979, 3, 0, 2686978, 3, 0, 2686977, 3, 0, 2686976, 3, 0, 2752511, 3, 0, 2752510, 3, 0, 2686974, 3, 0, 2686973, 3, 0, 2621437, 3, 0, 2555901, 3, 0, 2490364, 3, 0, 2424828, 3, 0, 2359292, 3, 0, 2293756, 3, 0, 2228221, 3, 0, 2162685, 3, 0, 2097149, 3, 0, 2097150, 3, 0, 2031614, 3, 0, 2031615, 3, 0, 2687019, 3, 0, 2621483, 3, 0, 2555947, 3, 0, 2490411, 3, 0, 2424876, 3, 0, 2359340, 3, 0, 2359341, 3, 0, 2293805, 3, 0, 2293806, 3, 0, 2228271, 3, 0, 2228272, 3, 0, 2162736, 3, 0, 2162737, 3, 0, 2162738, 3, 0, 2097203, 3, 0, 2097204, 3, 0, 2097205, 3, 0, 2097206, 3, 0, 2097207, 3, 0, 2097208, 3, 0, 2097209, 3, 0, 2031673, 3, 0, 2031674, 3, 0, 2031675, 3, 0, 2162763, 4, 0, 2228299, 4, 0, 2293836, 4, 0, 2359372, 4, 0, 2424908, 4, 0, 2490443, 4, 0, 2555979, 4, 0, 2621515, 4, 0, 2687051, 4, 0, 2687050, 4, 0, 2752586, 4, 0, 2752585, 4, 0, 2818120, 4, 0, 2818119, 4, 0, 2818118, 3, 0, 2818117, 3, 0, 2818116, 3, 0, 2883651, 3, 0, 2883650, 3, 0, 2883649, 3, 0, 2883648, 3, 0, 2883647, 3, 0, 2883646, 3, 0, 2883645, 3, 0, 2883644, 3, 0, 2883643, 3, 0, 2883642, 3, 0, 2883641, 3, 0, 2883640, 3, 0, 2883639, 3, 0, 2883638, 3, 0, 2883637, 3, 0, 2883636, 3, 0, 2818100, 3, 0, 2818099, 3, 0, 2818098, 3, 0, 2818097, 3, 0, 2818096, 3, 0, 2818095, 3, 0, 2818094, 3, 0, 2752557, 3, 0, 2752556, 3, 0, 2752555, 3, 0, 2752554, 3, 0, 2687018, 3, 0, 2490377, 3, 0, 2424841, 3, 0, 2359305, 3, 0, 2293769, 3, 0, 2228233, 3, 0, 2228232, 3, 0, 2228231, 3, 0, 2228230, 3, 0, 2228229, 3, 0, 2228228, 3, 0, 2162692, 3, 0, 2162691, 3, 0, 2162690, 3, 0, 2097154, 3, 0, 2097153, 3, 0, 2097152, 3, 0, 2031616, 3, 0, 2097151, 3, 0, 2162687, 3, 0, 2162686, 3, 0, 2228222, 3, 0, 2293758, 3, 0, 2293757, 3, 0, 2359293, 3, 0, 2424829, 3, 0, 2490365, 3, 0, 2490366, 3, 0, 2424830, 3, 0, 2359294, 3, 0, 2359295, 3, 0, 2293759, 3, 0, 2228223, 3, 0, 2162688, 3, 0, 2228224, 3, 0, 2293760, 3, 0, 2359296, 3, 0, 2424831, 3, 0, 2490367, 3, 0, 2555903, 3, 0, 2555902, 3, 0, 2621438, 3, 0, 2621439, 3, 0, 2686975, 3, 0, 2621440, 3, 0, 2555904, 3, 0, 2490368, 3, 0, 2424832, 3, 0, 2424833, 3, 0, 2359297, 3, 0, 2293761, 3, 0, 2228225, 3, 0, 2162689, 3, 0, 2228226, 3, 0, 2293762, 3, 0, 2359298, 3, 0, 2424834, 3, 0, 2490370, 3, 0, 2490369, 3, 0, 2555905, 3, 0, 2621441, 3, 0, 2621442, 3, 0, 2555906, 3, 0, 2555907, 3, 0, 2490371, 3, 0, 2424835, 3, 0, 2359299, 3, 0, 2293763, 3, 0, 2228227, 3, 0, 2293764, 3, 0, 2359300, 3, 0, 2424836, 3, 0, 2490372, 3, 0, 2555908, 3, 0, 2621444, 3, 0, 2621443, 3, 0, 2621445, 3, 0, 2555909, 3, 0, 2490373, 3, 0, 2424837, 3, 0, 2359301, 3, 0, 2293765, 3, 0, 2293766, 3, 0, 2359302, 3, 0, 2424838, 3, 0, 2490374, 3, 0, 2555910, 3, 0, 2621446, 3, 0, 2621447, 3, 0, 2555911, 3, 0, 2490375, 3, 0, 2424839, 3, 0, 2359303, 3, 0, 2293767, 3, 0, 2293768, 3, 0, 2359304, 3, 0, 2424840, 3, 0, 2490376, 3, 0, 2555912, 3, 0, 2621448, 3, 0, 2621449, 3, 0, 2555913, 3, 0, 2555914, 3, 0, 2490378, 3, 0, 2424842, 3, 0, 2359306, 3, 0, 2293770, 3, 0, 2228234, 3, 0, 2293771, 3, 0, 2359307, 3, 0, 2424843, 3, 0, 2490379, 3, 0, 2555915, 3, 0, 2621451, 3, 0, 2621450, 3, 0, 2621452, 3, 0, 2555916, 3, 0, 2490380, 3, 0, 2424844, 3, 0, 2359308, 3, 0, 2293772, 3, 0, 2293773, 3, 0, 2359309, 3, 0, 2424845, 3, 0, 2490381, 3, 0, 2555917, 3, 0, 2621453, 3, 0, 2621454, 3, 0, 2555918, 3, 0, 2490382, 3, 0, 2424846, 3, 0, 2359310, 3, 0, 2293774, 3, 0, 2293775, 3, 0, 2359311, 3, 0, 2424847, 3, 0, 2490383, 3, 0, 2555919, 3, 0, 2621455, 3, 0, 2621456, 3, 0, 2555920, 3, 0, 2490384, 3, 0, 2424848, 3, 0, 2359312, 3, 0, 2293776, 3, 0, 2359313, 3, 0, 2424849, 3, 0, 2490385, 3, 0, 2555921, 3, 0, 2621457, 3, 0, 2621458, 3, 0, 2555922, 3, 0, 2490386, 3, 0, 2424850, 3, 0, 2359314, 3, 0, 2359315, 3, 0, 2424851, 3, 0, 2490387, 3, 0, 2555923, 3, 0, 2621459, 3, 0, 2621460, 3, 0, 2555924, 3, 0, 2490388, 3, 0, 2424852, 3, 0, 2359316, 3, 0, 2424853, 3, 0, 2490389, 3, 0, 2555925, 3, 0, 2621461, 3, 0, 2621462, 3, 0, 2555926, 3, 0, 2490390, 3, 0, 2424854, 3, 0, 2424855, 3, 0, 2490391, 3, 0, 2555927, 3, 0, 2621463, 3, 0, 2621464, 3, 0, 2555928, 3, 0, 2490392, 3, 0, 2490393, 3, 0, 2555929, 3, 0, 2621465, 3, 0, 2621466, 3, 0, 2555930, 3, 0, 2490394, 3, 0, 2490395, 3, 0, 2555931, 3, 0, 2621467, 3, 0, 2555932, 3, 0, 2490396, 3, 0, 2490397, 3, 0, 2555933, 3, 0, 2555934, 3, 0, 2490419, 3, 0, 2424883, 3, 0, 2359347, 3, 0, 2293811, 3, 0, 2228275, 3, 0, 2162739, 3, 0, 2162740, 3, 0, 2228276, 3, 0, 2293812, 3, 0, 2359348, 3, 0, 2424884, 3, 0, 2490420, 3, 0, 2555956, 3, 0, 2555955, 3, 0, 2555954, 3, 0, 2490418, 3, 0, 2424882, 3, 0, 2359346, 3, 0, 2293810, 3, 0, 2228274, 3, 0, 2228273, 3, 0, 2293809, 3, 0, 2293808, 3, 0, 2293807, 3, 0, 2359343, 3, 0, 2359342, 3, 0, 2424878, 3, 0, 2424877, 3, 0, 2490413, 3, 0, 2490412, 3, 0, 2555948, 3, 0, 2621484, 3, 0, 2687020, 3, 0, 2687021, 3, 0, 2621485, 3, 0, 2555949, 3, 0, 2555950, 3, 0, 2490414, 3, 0, 2490415, 3, 0, 2424879, 3, 0, 2424880, 3, 0, 2359344, 3, 0, 2359345, 3, 0, 2424881, 3, 0, 2490417, 3, 0, 2490416, 3, 0, 2555952, 3, 0, 2555951, 3, 0, 2621487, 3, 0, 2621486, 3, 0, 2687022, 3, 0, 2752558, 3, 0, 2752559, 3, 0, 2687023, 3, 0, 2687024, 3, 0, 2621488, 3, 0, 2621489, 3, 0, 2555953, 3, 0, 2687025, 3, 0, 2752561, 3, 0, 2752560, 3, 0, 2752562, 3, 0, 2687026, 3, 0, 2621490, 3, 0, 2621491, 3, 0, 2687027, 3, 0, 2752563, 3, 0, 2752564, 3, 0, 2687028, 3, 0, 2621492, 3, 0, 2621493, 3, 0, 2555957, 3, 0, 2490421, 3, 0, 2424885, 3, 0, 2359349, 3, 0, 2293813, 3, 0, 2228277, 3, 0, 2162741, 3, 0, 2162742, 3, 0, 2228278, 3, 0, 2293814, 3, 0, 2359350, 3, 0, 2424886, 3, 0, 2490422, 3, 0, 2555958, 3, 0, 2621494, 3, 0, 2687030, 3, 0, 2687029, 3, 0, 2752565, 3, 0, 2818101, 3, 0, 2818102, 3, 0, 2752566, 3, 0, 2752567, 3, 0, 2687031, 3, 0, 2621495, 3, 0, 2555959, 3, 0, 2490423, 3, 0, 2424887, 3, 0, 2359351, 3, 0, 2293815, 3, 0, 2228279, 3, 0, 2162743, 3, 0, 2162744, 3, 0, 2228280, 3, 0, 2293816, 3, 0, 2359352, 3, 0, 2424888, 3, 0, 2490424, 3, 0, 2555960, 3, 0, 2621496, 3, 0, 2687032, 3, 0, 2752568, 3, 0, 2818104, 3, 0, 2818103, 3, 0, 2818105, 3, 0, 2752569, 3, 0, 2687033, 3, 0, 2621497, 3, 0, 2555961, 3, 0, 2490425, 3, 0, 2424889, 3, 0, 2359353, 3, 0, 2293817, 3, 0, 2228281, 3, 0, 2162745, 3, 0, 2162746, 3, 0, 2097210, 3, 0, 2097211, 3, 0, 2162747, 3, 0, 2228283, 3, 0, 2228282, 3, 0, 2293818, 3, 0, 2359354, 3, 0, 2424890, 3, 0, 2490426, 3, 0, 2555962, 3, 0, 2621498, 3, 0, 2687034, 3, 0, 2752570, 3, 0, 2818106, 3, 0, 2818107, 3, 0, 2752571, 3, 0, 2687035, 3, 0, 2621499, 3, 0, 2555963, 3, 0, 2490427, 3, 0, 2424891, 3, 0, 2359355, 3, 0, 2293819, 3, 0, 2293820, 3, 0, 2228284, 3, 0, 2162748, 3, 0, 2097212, 3, 0, 2162749, 3, 0, 2228285, 3, 0, 2293821, 3, 0, 2359357, 3, 0, 2359356, 3, 0, 2424892, 3, 0, 2490428, 3, 0, 2555964, 3, 0, 2621500, 3, 0, 2687036, 3, 0, 2752572, 3, 0, 2818108, 3, 0, 2818109, 3, 0, 2752573, 3, 0, 2687037, 3, 0, 2621501, 3, 0, 2555965, 3, 0, 2490429, 3, 0, 2424893, 3, 0, 2424894, 3, 0, 2359358, 3, 0, 2293822, 3, 0, 2228286, 3, 0, 2162750, 4, 0, 2162751, 4, 0, 2228287, 3, 0, 2293823, 3, 0, 2359359, 3, 0, 2424895, 3, 0, 2490431, 3, 0, 2490430, 3, 0, 2555966, 3, 0, 2621502, 3, 0, 2687038, 3, 0, 2752574, 3, 0, 2818110, 3, 0, 2818111, 3, 0, 2752575, 3, 0, 2687039, 3, 0, 2621503, 3, 0, 2555967, 3, 0, 2555968, 3, 0, 2490432, 3, 0, 2424896, 3, 0, 2359360, 3, 0, 2293824, 3, 0, 2228288, 4, 0, 2162752, 4, 0, 2162753, 4, 0, 2228289, 4, 0, 2293825, 4, 0, 2359361, 3, 0, 2424897, 3, 0, 2490433, 3, 0, 2555969, 3, 0, 2621505, 3, 0, 2621504, 3, 0, 2687040, 3, 0, 2752576, 3, 0, 2818112, 3, 0, 2818113, 3, 0, 2752577, 3, 0, 2687041, 3, 0, 2687042, 3, 0, 2621506, 3, 0, 2555970, 3, 0, 2490434, 3, 0, 2424898, 3, 0, 2359362, 4, 0, 2293826, 4, 0, 2228290, 4, 0, 2293827, 4, 0, 2359363, 4, 0, 2424899, 3, 0, 2490435, 3, 0, 2555971, 3, 0, 2621507, 3, 0, 2687043, 3, 0, 2752579, 3, 0, 2752578, 3, 0, 2818114, 3, 0, 2818115, 3, 0, 2752580, 3, 0, 2687044, 3, 0, 2621508, 3, 0, 2555972, 3, 0, 2490436, 3, 0, 2424900, 4, 0, 2359364, 4, 0, 2293828, 4, 0, 2293829, 4, 0, 2359365, 4, 0, 2424901, 4, 0, 2490437, 4, 0, 2555973, 4, 0, 2621509, 3, 0, 2687045, 3, 0, 2752581, 3, 0, 2752582, 4, 0, 2687046, 4, 0, 2621510, 4, 0, 2555974, 4, 0, 2490438, 4, 0, 2424902, 4, 0, 2359366, 4, 0, 2293830, 4, 0, 2228295, 4, 0, 2293831, 4, 0, 2359367, 4, 0, 2424903, 4, 0, 2490439, 4, 0, 2555975, 4, 0, 2621511, 4, 0, 2687047, 4, 0, 2752583, 4, 0, 2752584, 4, 0, 2687048, 4, 0, 2621512, 4, 0, 2555976, 4, 0, 2490440, 4, 0, 2424904, 4, 0, 2359368, 4, 0, 2293832, 4, 0, 2228296, 4, 0, 2162760, 4, 0, 2097224, 4, 0, 2097225, 4, 0, 2162761, 4, 0, 2228297, 4, 0, 2293833, 4, 0, 2359369, 4, 0, 2424905, 4, 0, 2490441, 4, 0, 2555977, 4, 0, 2621513, 4, 0, 2687049, 4, 0, 2621514, 4, 0, 2555978, 4, 0, 2490442, 4, 0, 2424906, 4, 0, 2359370, 4, 0, 2293834, 4, 0, 2228298, 4, 0, 2162762, 4, 0, 2097226, 4, 0, 2293835, 4, 0, 2359371, 4, 0, 2424907, 4, 0, 2031671, 3, 0, 2031670, 3, 0, 2031672, 3, 0, 1966136, 3, 0, 1966137, 3, 0, 1966138, 3, 0, 1966139, 3, 0, 2621516, 4, 0, 2555980, 4, 0, 2490445, 4, 0, 2424909, 4, 0, 2228300, 4, 0, 2490444, 4, 0, 2097201, 3, 0, 2097202, 3, 0, 2031667, 3, 0, 2031668, 3, 0, 2031669, 3, 0, 1966134, 3, 0, 1966135, 3, 0, 2490400, 3, 0, 2424864, 3, 0, 2424863, 3, 0, 2359327, 3, 0, 2293791, 3, 0, 2293790, 3, 0, 2293792, 3, 0, 2359328, 3, 0, 2228255, 3, 0, 2228254, 3, 0, 2162718, 3, 0, 2228256, 3, 0, 2162717, 3, 0, 2097180, 3, 0, 2097179, 3, 0, 2097178, 3, 0, 2097177, 3, 0, 2097176, 3, 0, 2031639, 3, 0, 2031638, 3, 0, 2031637, 3, 0, 2031636, 3, 0, 2031635, 3, 0, 2031634, 3, 0, 2031633, 3, 0, 2031632, 3, 0, 2031631, 3, 0, 2031630, 3, 0, 2031629, 3, 0, 2031628, 3, 0, 2031627, 3, 0, 2031626, 3, 0, 2031625, 3, 0, 1966089, 3, 0, 1966088, 3, 0, 1966087, 3, 0, 1966086, 3, 0, 1900550, 3, 0, 1900549, 3, 0, 1900548, 3, 0, 1900547, 3, 0, 1900546, 3, 0, 1900545, 3, 0, 1900544, 3, 0, 2162706, 3, 0, 2097170, 3, 0, 2097169, 3, 0, 2097168, 3, 0, 2097167, 3, 0, 2097166, 3, 0, 2097165, 3, 0, 2097164, 3, 0, 2097163, 3, 0, 2097162, 3, 0, 2097161, 3, 0, 2097160, 3, 0, 2031624, 3, 0, 2031623, 3, 0, 2031622, 3, 0, 2031621, 3, 0, 1966085, 3, 0, 1966084, 3, 0, 1966083, 3, 0, 2031620, 3, 0, 2097158, 3, 0, 2097159, 3, 0, 2162699, 3, 0, 2162700, 3, 0, 2162701, 3, 0, 2162702, 3, 0, 2162703, 3, 0, 2162704, 3, 0, 2162705, 3, 0, 2228241, 3, 0, 2228242, 3, 0, 2228243, 3, 0, 2162707, 3, 0, 2097171, 3, 0, 2097172, 3, 0, 2162708, 3, 0, 2228244, 3, 0, 2228245, 3, 0, 2162709, 3, 0, 2097173, 3, 0, 2097174, 3, 0, 2162710, 3, 0, 2228246, 3, 0, 2293782, 3, 0, 2293783, 3, 0, 2228247, 3, 0, 2162711, 3, 0, 2097175, 3, 0, 2162712, 3, 0, 2228248, 3, 0, 2293784, 3, 0, 2293785, 3, 0, 2228249, 3, 0, 2162713, 3, 0, 2162714, 3, 0, 2228250, 3, 0, 2293786, 3, 0, 2359322, 3, 0, 2359321, 3, 0, 2359323, 3, 0, 2293787, 3, 0, 2228251, 3, 0, 2162715, 3, 0, 2162716, 3, 0, 2228252, 3, 0, 2293788, 3, 0, 2359324, 3, 0, 2359325, 3, 0, 2293789, 3, 0, 2228253, 3, 0, 2359326, 3, 0, 2424862, 3, 0, 2424875, 3, 0, 2359339, 3, 0, 2293804, 3, 0, 2228268, 3, 0, 2228269, 3, 0, 2162733, 3, 0, 2097197, 3, 0, 2031661, 3, 0, 2031662, 3, 0, 2031663, 3, 0, 1966127, 3, 0, 1966128, 3, 0, 1966129, 3, 0, 1966130, 3, 0, 1966131, 3, 0, 1900595, 3, 0, 1900596, 3, 0, 1900597, 3, 0, 1900598, 3, 0, 1900599, 3, 0, 1900600, 3, 0, 1966133, 3, 0, 1966132, 3, 0, 2031666, 3, 0, 2097200, 3, 0, 2162735, 3, 0, 2228270, 3, 0, 2162734, 3, 0, 2097199, 3, 0, 2097198, 3, 0, 2031665, 3, 0, 2031664, 3, 0, 2490401, 3, 0, 2555937, 3, 0, 2621473, 3, 0, 2555946, 3, 0, 2621482, 3, 0, 2621481, 3, 0, 1966090, 3, 0, 1966091, 3, 0, 1966092, 3, 0, 1900557, 3, 0, 1900558, 3, 0, 1835023, 3, 0, 1769488, 3, 0, 1769489, 3, 0, 1703954, 3, 0, 1703955, 3, 0, 1703956, 3, 0, 1638420, 3, 0, 1638421, 3, 0, 1638422, 3, 0, 1638423, 3, 0, 1638424, 3, 0, 1638425, 3, 0, 1638426, 3, 0, 1572890, 3, 0, 1572891, 3, 0, 1638427, 3, 0, 1638428, 3, 0, 1703964, 3, 0, 1703965, 3, 0, 1769501, 3, 0, 1835037, 3, 0, 1900574, 3, 0, 1966110, 3, 0, 2031646, 3, 0, 2031647, 3, 0, 2097183, 3, 0, 2162719, 3, 0, 1900566, 3, 0, 1835030, 3, 0, 1769494, 3, 0, 1703958, 3, 0, 1703957, 3, 0, 1769493, 3, 0, 1769492, 3, 0, 1769491, 3, 0, 1769490, 3, 0, 1835026, 3, 0, 1835025, 3, 0, 1835024, 3, 0, 1900560, 3, 0, 1900559, 3, 0, 1966095, 3, 0, 1966094, 3, 0, 1966093, 3, 0, 1966096, 3, 0, 1966097, 3, 0, 1900561, 3, 0, 1900562, 3, 0, 1966098, 3, 0, 1966099, 3, 0, 1900563, 3, 0, 1835027, 3, 0, 1835028, 3, 0, 1900564, 3, 0, 1966100, 3, 0, 1966101, 3, 0, 1900565, 3, 0, 1835029, 3, 0, 1966102, 3, 0, 1966103, 3, 0, 1900567, 3, 0, 1835031, 3, 0, 1769495, 3, 0, 1703959, 3, 0, 1703960, 3, 0, 1769496, 3, 0, 1835032, 3, 0, 1900568, 3, 0, 1966104, 3, 0, 2031640, 3, 0, 2031641, 3, 0, 1966105, 3, 0, 1900569, 3, 0, 1835033, 3, 0, 1769497, 3, 0, 1703961, 3, 0, 1703962, 3, 0, 1769498, 3, 0, 1835034, 3, 0, 1900570, 3, 0, 1966106, 3, 0, 2031642, 3, 0, 2031643, 3, 0, 1966107, 3, 0, 1900571, 3, 0, 1835035, 3, 0, 1769499, 3, 0, 1703963, 3, 0, 1769500, 3, 0, 1835036, 3, 0, 1900572, 3, 0, 1966108, 3, 0, 2031644, 3, 0, 2031645, 3, 0, 1966109, 3, 0, 1900573, 3, 0, 2097181, 3, 0, 2097182, 3, 0, 1900591, 3, 0, 1900592, 3, 0, 1835056, 3, 0, 1769520, 3, 0, 1769521, 3, 0, 1703985, 3, 0, 1703986, 3, 0, 1638450, 3, 0, 1638451, 3, 0, 1638452, 3, 0, 1638453, 3, 0, 1638454, 3, 0, 1638455, 3, 0, 1703991, 3, 0, 1703992, 3, 0, 1769528, 3, 0, 1769529, 3, 0, 1835065, 3, 0, 1835066, 3, 0, 1900602, 3, 0, 1900603, 3, 0, 1900601, 3, 0, 1835064, 3, 0, 1835063, 3, 0, 1835062, 3, 0, 1769526, 3, 0, 1703990, 3, 0, 1703989, 3, 0, 1703987, 3, 0, 1769522, 3, 0, 1835058, 3, 0, 1900594, 3, 0, 1900593, 3, 0, 1835057, 3, 0, 1769523, 3, 0, 1703988, 3, 0, 1835061, 3, 0, 1835059, 3, 0, 1769524, 3, 0, 1835060, 3, 0, 1966126, 3, 0, 1900590, 3, 0, 1835055, 3, 0, 1769519, 3, 0, 1703983, 3, 0, 1638447, 3, 0, 1572911, 3, 0, 1507375, 3, 0, 1441839, 3, 0, 1441840, 3, 0, 1441841, 3, 0, 1441842, 3, 0, 1507376, 3, 0, 1572912, 3, 0, 1769518, 3, 0, 1835054, 3, 0, 1703982, 3, 0, 1638446, 3, 0, 1572910, 3, 0, 1507374, 3, 0, 1376303, 3, 0, 1376304, 3, 0, 1376305, 3, 0, 1507378, 3, 0, 1507379, 3, 0, 1507380, 3, 0, 1507381, 3, 0, 1572917, 3, 0, 1572918, 3, 0, 1638456, 3, 0, 1703993, 3, 0, 1769527, 3, 0, 1769525, 3, 0, 1572915, 3, 0, 1572914, 3, 0, 1572913, 3, 0, 1638448, 3, 0, 1703984, 3, 0, 1507377, 3, 0, 1638449, 3, 0, 1572916, 3, 0)

[node name="title" parent="." instance=ExtResource("4_u8sy7")]
text = "
[center][wave]Bury the Treasure!"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(589, 607)
scale = Vector2(2.03125, 1.79687)
texture = ExtResource("5_642sv")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D"]
position = Vector2(-290.462, -342.261)
scale = Vector2(0.492308, 0.556522)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite2D/StaticBody2D"]
polygon = PackedVector2Array(558, 658, 559, 631, 572, 622, 562, 619, 568, 609, 576, 605, 619, 602, 631, 619, 634, 647, 629, 654)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(15, 647, -1, 2, 1154, 1, 1158, 649, 16, 652, -1, 688, 1216, 690, 1202, -77, -65, -66, -9, 691)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(602, 550)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 45)
shape = SubResource("RectangleShape2D_orxm7")

[node name="placeable_area" parent="." instance=ExtResource("6_rayiv")]
offset_left = 175.0
offset_top = 190.0
offset_right = 393.14
offset_bottom = 320.55

[node name="placeable_area2" parent="." instance=ExtResource("6_rayiv")]
offset_left = 818.0
offset_top = 190.0
offset_right = 1036.14
offset_bottom = 320.55

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
polygon = PackedVector2Array(9, 466, 104, 473, 112, 490, 206, 486, 325, 408, 415, 403, 424, 388, 445, 389, 536, 645, 19, 649)

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D3"]
polygon = PackedVector2Array(666, 647, 696, 619, 696, 583, 710, 576, 712, 550, 729, 540, 728, 503, 745, 491, 748, 371, 759, 369, 762, 338, 788, 342, 826, 371, 857, 375, 885, 409, 901, 408, 924, 440, 952, 473, 959, 511, 986, 537, 1014, 547, 1057, 593, 1081, 596, 1095, 613, 1113, 651)

[node name="Water" type="Node2D" parent="."]
position = Vector2(1118, 577)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
